Final_Week_Nº11

--- a/index.html
+++ b/index.html
@@ -228,34 +228,43 @@
             <button class="danger_title"><h3>¡¡Avisos Importantes!!</h3></button>
             <br>
             <p class="danger_zone"><b>Avisos:
-                <br><br>Acordarse de los epp para-
-                <br>taller.
-                <br>Comenzaremos las clases el dia
-                <br>jueves 27/7
+                <br>
                 <br><br>Resumen Semanal:
                 <br><br>Lunes:
                 <br><br>Historia:
                 <br>Hacer tarea pedida en clase
                 <br><br>Etica:
                 <br>Estudiar para la prueba
+                <br><br>Geografia:
+                <br>Hacer Guia y Folleto
                 <br><br>Martes:
+                <br><br>Biologia:
+                <br>Estudiar para evaluacion
                 <br><br>Lengua:
                 <br>Hacer actividades pedidas-
                 <br>en clase.
                 <br><br>Ingles:
                 <br>Hacer actividades pedidas-
                 <br>en clase.
+                <br><br>Tutoria:
+                <br>Hacer actividades
                 <br><br>Miercoles:
+                <br><br>Dibujo Tecnico:
+                <br>Hacer lamina
+                <br><br>Tecnologia:
+                <br>Traer lampara
                 <br><br>Jueves:
                 <br><br>Quimica:
                 <br>Hacer resumen de laboratorio
+                <br>Hacer actividades
                 <br><br>Taller:
-                <br>Traer informe
+                <br>Traer informe los que les-
+                <br>falto
                 <br><br>Viernes:
                 <br><br>Fisica:
-                <br>Hacer actividades.
-                <br>Practica de laboratorio.
-                <br></b></p>
+                <br>Traer informe
+                <br><br>Teatro:
+                <br>Traer obra pedida en clase.</b></p>
             <!-- <button id="notification" class="notifications"><p><b>Notificarme de Tareas</b></p></button> -->
             <a target="_blank" href="https://fotocomercio.mitiendanube.com"><button class="foto_title"><h3>Ir a fotocopiadora</h3></button></a>
             <br>
