Final_Week_Nº11

--- a/index.html
+++ b/index.html
@@ -235,11 +235,10 @@
                 <br>Hacer tarea pedida en clase
                 <br><br>Etica:
                 <br>Estudiar para la prueba
-                <br><br>Geografia:
-                <br>Hacer Guia y Folleto
+                <br><br>Lengua:
+                <br>Entrega de los vecinos muer-
+                <br>en en las novelas y dibujo.
                 <br><br>Martes:
-                <br><br>Biologia:
-                <br>Estudiar para evaluacion
                 <br><br>Lengua:
                 <br>Hacer actividades pedidas-
                 <br>en clase.
@@ -248,21 +247,24 @@
                 <br>en clase.
                 <br><br>Tutoria:
                 <br>Hacer actividades
+                <br><br>Informatica:
+                <br>Ultimo dia para entregar-
+                <br>trabajo de informatica.
                 <br><br>Miercoles:
                 <br><br>Dibujo Tecnico:
-                <br>Hacer lamina
+                <br>Hacer lamina con punta y-
+                <br>papel manteca.
+                <br><br>Matematica:
+                <br>Hacer guia desde suma-
+                <br>hasta multiplicacion
                 <br><br>Tecnologia:
-                <br>Traer lampara
+                <br>Hacer actividades pedidas-
+                <br>en clase.
                 <br><br>Jueves:
                 <br><br>Quimica:
-                <br>Hacer resumen de laboratorio
                 <br>Hacer actividades
-                <br><br>Taller:
-                <br>Traer informe los que les-
-                <br>falto
                 <br><br>Viernes:
-                <br><br>Teatro:
-                <br>Traer obra pedida en clase.</b></p>
+                <br><br></b></p>
             <!-- <button id="notification" class="notifications"><p><b>Notificarme de Tareas</b></p></button> -->
             <a target="_blank" href="https://fotocomercio.mitiendanube.com"><button class="foto_title"><h3>Ir a fotocopiadora</h3></button></a>
             <br>
