Final_Week_Nº13

--- a/index.html
+++ b/index.html
@@ -231,39 +231,35 @@
                 <br>
                 <br><br>Resumen Semanal:
                 <br><br>Lunes:
-                <br><br>Historia:
-                <br>Hacer tarea pedida en clase
                 <br><br>Etica:
-                <br>Estudiar para la prueba
-                <br><br>Lengua:
-                <br>Entrega de los vecinos muer-
-                <br>en en las novelas y dibujo.
+                <br>Hacer hasta el punto 6 de-
+                <br>las actividades pedidas.
+                <br><br>Geografia:
+                <br>Hacer guia
                 <br><br>Martes:
-                <br><br>Lengua:
-                <br>Hacer actividades pedidas-
-                <br>en clase.
-                <br><br>Ingles:
-                <br>Hacer actividades pedidas-
-                <br>en clase.
                 <br><br>Tutoria:
-                <br>Hacer actividades
-                <br><br>Informatica:
-                <br>Ultimo dia para entregar-
-                <br>trabajo de informatica.
+                <br>Traer proyecto de vida
                 <br><br>Miercoles:
                 <br><br>Dibujo Tecnico:
-                <br>Hacer lamina con punta y-
-                <br>papel manteca.
+                <br>Hacer lamina
                 <br><br>Matematica:
-                <br>Hacer guia desde suma-
-                <br>hasta multiplicacion
+                <br>Estudiar los q falta tomar-
+                <br>o los q tienen 6 o 6,50.
                 <br><br>Tecnologia:
                 <br>Hacer actividades pedidas-
                 <br>en clase.
                 <br><br>Jueves:
-                <br><br>Quimica:
+                <br><br>Informatica:
                 <br>Hacer actividades
+                <br><br>Quimica:
+                <br>Estudiar para evaluacion
+                <br><br>Matematica:
+                <br>Traer cosas para la despedida.
                 <br><br>Viernes:
+                <br><br>Fisica:
+                <br>Evaluacion los q faltaron.
+                <br><br>Teatro:
+                <br>Hacer maqueta.
                 <br><br></b></p>
             <!-- <button id="notification" class="notifications"><p><b>Notificarme de Tareas</b></p></button> -->
             <a target="_blank" href="https://fotocomercio.mitiendanube.com"><button class="foto_title"><h3>Ir a fotocopiadora</h3></button></a>
