FINAL_WEEK_Nº13_FIXED

--- a/index.html
+++ b/index.html
@@ -233,10 +233,12 @@
                 <br><br>Lunes:
                 <br><br>Etica:
                 <br>Hacer hasta el punto 6 de-
-                <br>las actividades pedidas.
+                <br>las actividades pedida
+                <br><br>Martes:
+                <br><br>Biologia:
+                <br>Hacer cuadro de las hormonas
                 <br><br>Geografia:
                 <br>Hacer guia
-                <br><br>Martes:
                 <br><br>Tutoria:
                 <br>Traer proyecto de vida
                 <br><br>Miercoles:
