FINAL_WEEK_Nº15

--- a/index.html
+++ b/index.html
@@ -242,26 +242,14 @@
                 <br><br>Tutoria:
                 <br>Traer proyecto de vida
                 <br><br>Miercoles:
-                <br><br>Dibujo Tecnico:
-                <br>Hacer lamina
-                <br><br>Matematica:
-                <br>Estudiar los q falta tomar-
-                <br>o los q tienen 6 o 6,50.
-                <br><br>Tecnologia:
-                <br>Hacer actividades pedidas-
-                <br>en clase.
+                <br>
                 <br><br>Jueves:
                 <br><br>Informatica:
                 <br>Hacer actividades
-                <br><br>Quimica:
-                <br>Estudiar para evaluacion
-                <br><br>Matematica:
-                <br>Traer cosas para la despedida.
                 <br><br>Viernes:
                 <br><br>Fisica:
-                <br>Evaluacion los q faltaron.
                 <br><br>Teatro:
-                <br>Hacer maqueta.
+                <br>Traer la tarea pedida.
                 <br><br></b></p>
             <!-- <button id="notification" class="notifications"><p><b>Notificarme de Tareas</b></p></button> -->
             <a target="_blank" href="https://fotocomercio.mitiendanube.com"><button class="foto_title"><h3>Ir a fotocopiadora</h3></button></a>
