FINAL_WEEK_Nº16

--- a/index.html
+++ b/index.html
@@ -231,23 +231,37 @@
                 <br>
                 <br><br>Resumen Semanal:
                 <br><br>Lunes:
+                <br><br>Historia:
+                <br>Hacer 1º paso de lo pedi-
+                <br>do en clase.
                 <br><br>Etica:
-                <br>Hacer hasta el punto 6 de-
-                <br>las actividades pedida
+                <br>Hacer actividades
+                <br><br>Geografia:
+                <br>Traer guia
                 <br><br>Martes:
                 <br><br>Biologia:
-                <br>Hacer cuadro de las hormonas
-                <br><br>Geografia:
-                <br>Hacer guia
+                <br>Traer actividades hechas
+                <br><br>Lengua:
+                <br>Avanzar con el Gheto
+                <br><br>Ingles:
+                <br>Hacer lo de Kermes
                 <br><br>Tutoria:
                 <br>Traer proyecto de vida
                 <br><br>Miercoles:
-                <br>
+                <br><br>Matematica:
+                <br>Traer hasta act nº4
                 <br><br>Jueves:
                 <br><br>Informatica:
-                <br>Hacer actividades
+                <br>Hacer guia y avanzar con pra-
+                <br>ctica
+                <br><br>Quimica:
+                <br>Traer actividades hechas
+                <br><br>Ingles:
+                <br>Traer lo de Kermes para exponer
                 <br><br>Viernes:
                 <br><br>Fisica:
+                <br>Leer la parte practica para la-
+                <br>practica.
                 <br><br>Teatro:
                 <br>Traer la tarea pedida.
                 <br><br></b></p>
