FINAL_WEEK_Nº17

--- a/index.html
+++ b/index.html
@@ -235,36 +235,31 @@
                 <br>Hacer 1º paso de lo pedi-
                 <br>do en clase.
                 <br><br>Etica:
-                <br>Hacer actividades
+                <br>Llevar materiales
                 <br><br>Geografia:
                 <br>Traer guia
+                <br><br>Informatica:
+                <br>Entrega
+                <br><br>Quimica:
+                <br>Entregar trabajo
                 <br><br>Martes:
                 <br><br>Biologia:
-                <br>Traer actividades hechas
+                <br>Estudiar para la prueba
                 <br><br>Lengua:
                 <br>Avanzar con el Gheto
-                <br><br>Ingles:
-                <br>Hacer lo de Kermes
                 <br><br>Tutoria:
                 <br>Traer proyecto de vida
                 <br><br>Miercoles:
                 <br><br>Matematica:
-                <br>Traer hasta act nº4
+                <br>Traer hasta punto 13
                 <br><br>Jueves:
-                <br><br>Informatica:
-                <br>Hacer guia y avanzar con pra-
-                <br>ctica
                 <br><br>Quimica:
-                <br>Traer actividades hechas
-                <br><br>Ingles:
-                <br>Traer lo de Kermes para exponer
+                <br>Practica de laboratorio 28/9
                 <br><br>Viernes:
                 <br><br>Fisica:
-                <br>Leer la parte practica para la-
-                <br>practica.
+                <br>Traer informe
                 <br><br>Teatro:
-                <br>Traer la tarea pedida.
-                <br><br></b></p>
+                <br>Leer obra , y hacer tarea.</b></p>
             <!-- <button id="notification" class="notifications"><p><b>Notificarme de Tareas</b></p></button> -->
             <a target="_blank" href="https://fotocomercio.mitiendanube.com"><button class="foto_title"><h3>Ir a fotocopiadora</h3></button></a>
             <br>
