Final_Week_Nº18

--- a/index.html
+++ b/index.html
@@ -232,32 +232,28 @@
                 <br><br>Resumen Semanal:
                 <br><br>Lunes:
                 <br><br>Historia:
-                <br>Hacer 1º paso de lo pedi-
-                <br>do en clase.
+                <br>Exposicion
                 <br><br>Etica:
-                <br>Llevar materiales
+                <br>Exposicion
                 <br><br>Geografia:
-                <br>Traer guia
-                <br><br>Informatica:
-                <br>Entrega
-                <br><br>Quimica:
-                <br>Entregar trabajo
+                <br>Evaluacion
                 <br><br>Martes:
-                <br><br>Biologia:
-                <br>Estudiar para la prueba
                 <br><br>Lengua:
                 <br>Avanzar con el Gheto
                 <br><br>Tutoria:
-                <br>Traer proyecto de vida
+                <br>Entregar tarea de-
+                <br>especialidades
                 <br><br>Miercoles:
                 <br><br>Matematica:
-                <br>Traer hasta punto 13
+                <br>Hacer actividades
+                <br><br>Tecnologia:
+                <br>Evaluacion
                 <br><br>Jueves:
                 <br><br>Quimica:
                 <br>Practica de laboratorio 28/9
+                <br><br>Etica:
+                <br>Salida al cine
                 <br><br>Viernes:
-                <br><br>Fisica:
-                <br>Traer informe
                 <br><br>Teatro:
                 <br>Leer obra , y hacer tarea.</b></p>
             <!-- <button id="notification" class="notifications"><p><b>Notificarme de Tareas</b></p></button> -->
