FINAL_WEEK_Nº20

--- a/index.html
+++ b/index.html
@@ -228,34 +228,29 @@
             <button class="danger_title"><h3>¡¡Avisos Importantes!!</h3></button>
             <br>
             <p class="danger_zone"><b>Avisos:
-                <br>
+                <br>Para el lunes 16 entrega de info
                 <br><br>Resumen Semanal:
                 <br><br>Lunes:
-                <br><br>Historia:
-                <br>Exposicion
                 <br><br>Etica:
-                <br>Exposicion
+                <br>Hacer la guia
                 <br><br>Geografia:
-                <br>Evaluacion
+                <br>Hacer la guia
                 <br><br>Martes:
-                <br><br>Lengua:
-                <br>Avanzar con el Gheto
+                <br><br>Biologia:
+                <br>Hacer deberes
                 <br><br>Tutoria:
-                <br>Entregar tarea de-
-                <br>especialidades
+                <br>Hacer tarea de la especialidad
                 <br><br>Miercoles:
+                <br><br>Dibujo Tecnico:
+                <br>Hacer lamina
                 <br><br>Matematica:
                 <br>Hacer actividades
-                <br><br>Tecnologia:
-                <br>Evaluacion
                 <br><br>Jueves:
                 <br><br>Quimica:
-                <br>Practica de laboratorio 28/9
-                <br><br>Etica:
-                <br>Salida al cine
+                <br>Hacer actividades
                 <br><br>Viernes:
                 <br><br>Teatro:
-                <br>Leer obra , y hacer tarea.</b></p>
+                <br>Aprenderse su parte de la obra.</b></p>
             <!-- <button id="notification" class="notifications"><p><b>Notificarme de Tareas</b></p></button> -->
             <a target="_blank" href="https://fotocomercio.mitiendanube.com"><button class="foto_title"><h3>Ir a fotocopiadora</h3></button></a>
             <br>
