FINAL_WEEK_Nº20_FIXED

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                 <br>Para el lunes 16 entrega de info
                 <br><br>Resumen Semanal:
                 <br><br>Lunes:
-                <br><br>Etica:
+                <br><br>Historia:
                 <br>Hacer la guia
                 <br><br>Geografia:
                 <br>Hacer la guia
