FINAL_WEEK_Nº21

--- a/index.html
+++ b/index.html
@@ -228,23 +228,26 @@
             <button class="danger_title"><h3>¡¡Avisos Importantes!!</h3></button>
             <br>
             <p class="danger_zone"><b>Avisos:
-                <br>Para el lunes 16 entrega de info
+                <br>Hoy es la entrega de info.
                 <br><br>Resumen Semanal:
                 <br><br>Lunes:
-                <br><br>Historia:
-                <br>Hacer la guia
-                <br><br>Geografia:
-                <br>Hacer la guia
+                <br>No hubo clases no mamen.
                 <br><br>Martes:
                 <br><br>Biologia:
                 <br>Hacer deberes
+                <br><br>Ingles:
+                <br>Estudiar para el oral.
+                <br><br>Geografia:
+                <br>Estudiar para evaluacion.
                 <br><br>Tutoria:
-                <br>Hacer tarea de la especialidad
+                <br>Se continua con el trabajo
                 <br><br>Miercoles:
                 <br><br>Dibujo Tecnico:
-                <br>Hacer lamina
+                <br>Entrega de lamina
                 <br><br>Matematica:
-                <br>Hacer actividades
+                <br>Estudiar para evaluacion
+                <br><br>Tecnologia:
+                <br>Hacer deberes
                 <br><br>Jueves:
                 <br><br>Quimica:
                 <br>Hacer actividades
